--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Smart Crop Prediction System with ML",
   "main": "server/index.js",
   "scripts": {
-    "start": "cd server && npm install && npm start",
+    "start": "cd server && npm start",
     "dev": "cd server && npm run dev",
-    "build": "cd server && npm install"
+    "build": "cd server && npm install",
+    "render-build": "cd server && npm install",
+    "render-start": "cd server && npm start"
   },
   "engines": {
     "node": ">=18.0.0"
